[package]
name = "dynamic-amm"
version = "0.6.1"
description = "Created with Anchor"
edition = "2021"

[features]
default = ["cpi"]
no-entrypoint = []
cpi = ["no-entrypoint"]
localnet = []
staging = []

[lib]
crate-type = ["cdylib", "lib"]
name = "dynamic_amm"

[dependencies]
anchor-lang = { version = "0.32.1", features = ["event-cpi"] }
anchor-spl = "0.32.1"
solana-program = "3.0.0"
